--- a/springPrjt/pom.xml
+++ b/springPrjt/pom.xml
@@ -191,6 +191,12 @@
 			<version>0.2.7</version>
 		</dependency>
 
+		<!-- json  -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.6</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
