--- a/springAll/pom.xml
+++ b/springAll/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>5.2.7.RELEASE</org.springframework-version>
+		<org.springframework.security-version>5.2.5.RELEASE</org.springframework.security-version>
 		<org.aspectj-version>1.9.5</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<org.apache.tiles-version>3.0.7</org.apache.tiles-version>
@@ -49,6 +50,23 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+        <!--  spring-security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${org.springframework.security-version}</version>
+        </dependency> 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${org.springframework.security-version}</version>
+        </dependency>
+               
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -222,11 +240,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.13.0</version>
 		</dependency>
-        <dependency>
-            <groupId>net.sf.jasperreports</groupId>
-            <artifactId>jasperreports-fonts</artifactId>
-            <version>6.13.0</version>
-        </dependency>		
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.13.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
