--- a/springSecurity/src/main/resources/database.properties
+++ b/springSecurity/src/main/resources/database.properties
@@ -1,5 +1,4 @@
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
-jdbc.username=spring
-jdbc.password=spring
-file.path=/resources/upload
+jdbc.username=hr
+jdbc.password=hr
