--- a/comp2/pom.xml
+++ b/comp2/pom.xml
@@ -32,9 +32,9 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		<repository>
-			<id>egovframe</id><!-- http://maven.egovframe.go.kr:8080/maven/ -->
-			<url>https://repo.maven.apache.org/maven2/</url>
+ 		<repository>
+			<id>egovframe</id>
+			<url>https://maven.egovframe.kr:8080/maven/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -42,9 +42,9 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		<repository>
+		<!-- <repository>
 			<id>egovframe_old1</id>
-			<url>http://maven.egovframe.kr:8080/maven/</url>
+			<url>http://maven.egovframe.go.kr:8080/maven/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -61,7 +61,7 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</repository> 
+		</repository>   -->
 	</repositories>
 
 	<dependencies>
@@ -93,12 +93,12 @@
 			<version>${egovframework.rte.version}</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -448,7 +448,7 @@
 			<artifactId>ojdbc8</artifactId>
 			<version>19.8.0.0</version>
 		</dependency>
-
+<!-- 
 		<dependency>
 			<groupId>altibase</groupId>
 			<artifactId>altibase-jdbc-driver</artifactId>
@@ -496,7 +496,7 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/libgpkiapi_jni-1.4.0.0.jar</systemPath>
 		</dependency>
-
+ -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -511,12 +511,12 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>javax.annotation</groupId>
@@ -551,10 +551,10 @@
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<directory>${basedir}/target</directory>
-		<finalName>${artifactId}-${version}</finalName>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 		<pluginManagement>
 			<plugins>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
@@ -565,7 +565,7 @@
 							<JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
 						</systemProperties>
 					</configuration>
-				</plugin>
+				</plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
