--- a/comp2/pom.xml
+++ b/comp2/pom.xml
@@ -32,9 +32,10 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		
  		<repository>
 			<id>egovframe</id>
-			<url>https://maven.egovframe.kr:8080/maven/</url>
+			<url>https://repo.maven.apache.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
