--- a/comp2/pom.xml
+++ b/comp2/pom.xml
@@ -22,7 +22,7 @@
 	</properties>
 
 	<repositories>
-		<repository>
+	<!--	<repository>
 			<id>mvn2s</id>
 			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
@@ -32,9 +32,9 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		
+		-->
  		<repository>
-			<id>egovframe</id>
+			<id>mvn2</id>
 			<url>https://repo.maven.apache.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
