--- a/comp2/pom.xml
+++ b/comp2/pom.xml
@@ -22,8 +22,8 @@
 	</properties>
 
 	<repositories>
-	<!--	<repository>
-			<id>mvn2s</id>
+		<repository>
+			<id>mvn1</id>
 			<url>https://repo1.maven.org/maven2/</url>
 			<releases>
 				<enabled>true</enabled>
@@ -32,7 +32,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		-->
+		
  		<repository>
 			<id>mvn2</id>
 			<url>https://repo.maven.apache.org/maven2/</url>
